# psd-paths

./: .env.toml  .gitignore  Makefile  README.md  _quarto.yml  local.yml  local_noARM.yml  mne-bids_config.py  prompt-context.txt  pyproject.toml  requirements.txt  settings.toml  tasks.py
analysis/: EnsureFolderStructure.ipynb
analysis/preprocessing/: AutoLabel.ipynb
analysis/subjects/: sub-101-step-3-specparam_alone.ipynb
docs/: AnalysisQualityCheck.ipynb  _quarto.yml  analysis.aux  analysis.html  analysis.qmd  analysis.tex  custom.css  paths.bib
docs/_output/: AnalysisQualityCheck.html  analysis.html
final_results/: PlotVeryGoodSubjectPSD.ipynb  test.ipynb
final_results/check_subjects/: ICA TO REMOVE.xlsx  sub_101_reanalysis.ipynb  sub_106_reanalysis.ipynb  sub_108_reanalysis.ipynb  sub_120_reanalysis.ipynb  sub_124_reanalysis.ipynb  sub_126_reanalysis.ipynb  sub_128_reanalysis.ipynb  sub_129_reanalysis.ipynb  sub_132_reanalysis.ipynb  sub_135_reanalysis.ipynb  sub_139_reanalysis.ipynb  sub_142_reanalysis.ipynb  sub_144_reanalysis.ipynb  sub_145_reanalysis.ipynb  sub_146_reanalysis.ipynb  sub_147_reanalysis.ipynb
final_results/notebooks/: AutomatedAddingCels-v2.ipynb  CopyFIles.ipynb  CreateNotebookPlot.ipynb
final_results/specparam/: sub-101-specparam.csv  sub-102-specparam.csv  sub-103-specparam.csv  sub-104-specparam.csv  sub-105-specparam.csv  sub-106-specparam.csv  sub-107-specparam.csv  sub-108-specparam.csv  sub-109-specparam.csv  sub-110-specparam.csv  sub-111-specparam.csv  sub-112-specparam.csv  sub-113-specparam.csv  sub-114-specparam.csv  sub-115-specparam.csv  sub-116-specparam.csv  sub-118-specparam.csv  sub-119-specparam.csv  sub-120-specparam.csv  sub-121-specparam.csv  sub-122-specparam.csv  sub-123-specparam.csv  sub-124-specparam.csv  sub-125-specparam.csv  sub-126-specparam.csv  sub-127-specparam.csv  sub-128-specparam.csv  sub-129-specparam.csv  sub-131-specparam.csv  sub-132-specparam.csv  sub-134-specparam.csv  sub-135-specparam.csv  sub-136-specparam.csv  sub-137-specparam.csv  sub-138-specparam.csv  sub-139-specparam.csv  sub-140-specparam.csv  sub-142-specparam.csv  sub-143-specparam.csv  sub-144-specparam.csv  (+8 more)
notebooks/0-report/: BadSubjectCriterium.ipynb  Preprocessing.ipynb
notebooks/1-preprocessing/: 1-data-cleaning.ipynb  ICA TO REMOVE.xlsx  template-1-raw.ipynb  template-2-epochs-autoreject.ipynb  template-4-specparam.ipynb  template-epochs-autoreject.ipynb  template-raw.ipynb
notebooks/1a-cleaning-subject-data/: Sub117.html  subject101qt.qmd
notebooks/2-bad_subjects/: AutomatedAddingCels-v2.ipynb  utils.py
notebooks/test/: test.ipynb
src/Python/: pyproject.toml
src/Python/spectral/: epochs.py  ica.py  preproc.py  utills.py  utils.py  viz.py
src/spectral/: README.md  pyproject.toml
src/spectral/spectral/: __init__.py  artifacts.py  epochs.py  paths_utils.py  preproc.py  specparam.py  utils.py
(+18 files in other folders)
